Style: Vegetable-container z-index added to avoid dragged item other parts appears.

--- a/frontend/src/stylesheet/garden/GardenPlanner.scss
+++ b/frontend/src/stylesheet/garden/GardenPlanner.scss
@@ -125,6 +125,8 @@
         border-radius: $border-radius-smaller;
         margin: 5px;
 
+        z-index: 1;
+
         .vegetable-name {
           font-size: 1vw;
           margin: 5px 10px;
